@@ -24,6 +24,7 @@ Controls over all lightness(related to the adaptation level), the greater the va
 .TP
 \fB--inv_alpha-a\fR <val>, \fB-a\fR<val>
 Controls the level of detail, the higher the value the bigger the level of detail enhancement. Default value: 0.1
+.TP
 \fB--verbose\fR
 Print additional information during program execution.
 .TP
