@@ -38,7 +38,7 @@ Print additional information during program execution.
 Print list of commandline options.
 .SH EXAMPLES
 .TP
-pfsin memorial.hdr | pfstmo_reinhard04 -s 0.5 | pfsout memorial.png
+pfsin memorial.hdr | pfstmo_reinhard05 -s 0.5 | pfsgamma -g 2.2 | pfsout memorial.png
 
 Tone map image and save it in png format.
 .SH "SEE ALSO"
